Welcome to the NcX changelog

Changelog 20231202
• Fix Voice Focus
• Add screen modes in settings
• Floating: Add camera access toggle
• Floating: POI in Gallery
• Floating: Switch to HighEnd animations
• Floating: Allow remaster in all photos
• Floating: Allow individual app cast in SmartView
• Floating: Full edge lighting
• Floating: Add interview mode in voice recorder