@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <OnOTAInfo>
   <RomName>NcX ROM</RomName>
-  <VersionName>20231202 Update</VersionName>
-  <BuildNumber type="integer">20231202</BuildNumber>
-  <DownloadURL>https://github.com/ShaDisNX255/NcX_OnUpdate/releases/download/a52sxq-20231202/OTA-20231202-a52sxq.zip</DownloadURL>
+  <VersionName>20231203 Update</VersionName>
+  <BuildNumber type="integer">20231203</BuildNumber>
+  <DownloadURL>https://github.com/ShaDisNX255/NcX_OnUpdate/releases/download/a52sxq-20231203/OTA-20231203-a52sxq.zip</DownloadURL>
   <AndroidVer>14</AndroidVer>
   <OneUIVer>6</OneUIVer>
-  <CheckMD5>bd3090db62f32edf47045b06ab212766</CheckMD5>
-  <FileSize type="long">50954749</FileSize>
+  <CheckMD5>547e8dc9aeacff065ca74074ca3a591c</CheckMD5>
+  <FileSize type="long">34324784</FileSize>
   <WebsiteURL>https://forum.xda-developers.com/apps/magisk/dev-magisk-canary-channel-bleeding-edge-t3839337</WebsiteURL>
   <ChangelogHeader>https://raw.githubusercontent.com/ShaDisNX255/NcX_OnUpdate/1035d72bc45728992d5ba59b44915635765ab8f6/banner.png</ChangelogHeader>
   <ChangelogURL>https://raw.githubusercontent.com/ShaDisNX255/NcX_OnUpdate/fourteen/a52sxq/changelog.txt</ChangelogURL>
