@@ -16,7 +16,7 @@ setdefault devices off
 ui_print " "
 
 ui_print " ___________________________________"
-ui_print "       20231202 update - A52s       "
+ui_print "       20231203 update - A52s       "
 ui_print " ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯"
 
 #Installation
@@ -24,12 +24,17 @@ ui_print " Mounting partitions... "
 auto_mount_partitions
 ui_print " Extracting files... "
 package_extract_dir system /system
-update_file_string "ro.on.core.version=20231202" "/system/build.prop"
-update_file_string "ro.on.core.build=20231202" "/system/build.prop"
+package_extract_dir vendor /vendor
+update_file_string "ro.on.core.version=20231203" "/system/build.prop"
+update_file_string "ro.on.core.build=20231203" "/system/build.prop"
 ui_print " Giving permissions... "
-set_perm 0 0 0644 /system/priv-app/SecSettings/SecSettings.apk
-set_perm 0 0 0644 /system/etc/floating_feature.xml
+set_perm 0 0 0644 /system/cameradata/camera-feature.xml
+set_perm 0 0 0644 /system/framework/services.jar
+set_perm 0 0 0644 /system/framework/framework.jar
+set_perm 0 0 0644 /system/framework/knoxsdk.jar
 set_perm 0 0 0644 /system/build.prop
+set_perm 0 0 0644 /vendor/default.prop
+set_perm 0 0 0644 /vendor/etc/init/hw/init.target.rc
 #unmount
 ui_print " Unmounting... "
 umount_all
